--- a/RabbitMQ-Microservices/RabbitMQMicroservices.Banking.Application/RabbitMQMicroservices.Banking.Application.csproj
+++ b/RabbitMQ-Microservices/RabbitMQMicroservices.Banking.Application/RabbitMQMicroservices.Banking.Application.csproj
@@ -4,4 +4,8 @@
     <TargetFramework>net5.0</TargetFramework>
   </PropertyGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\RabbitMQMicroservices.Banking.Domain\RabbitMQMicroservices.Banking.Domain.csproj" />
+  </ItemGroup>
+
 </Project>
