--- a/RabbitMQ-Microservices/RabbitMQMicroservices.Banking.Api/appsettings.json
+++ b/RabbitMQ-Microservices/RabbitMQMicroservices.Banking.Api/appsettings.json
@@ -6,5 +6,9 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "BankingDbConnection" : "Server=DESKTOP-1LHSU0R\\sqlexpress;Database=BankingDB;Trusted_Connection=True;MultipleActiveResultSets=true"
+
+  }
 }
