--- a/RabbitMQ-Microservices/RabbitMQMicroservices.Banking.Api/RabbitMQMicroservices.Banking.Api.csproj
+++ b/RabbitMQ-Microservices/RabbitMQMicroservices.Banking.Api/RabbitMQMicroservices.Banking.Api.csproj
@@ -12,14 +12,11 @@
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
     </PackageReference>
     <PackageReference Include="Swashbuckle.AspNetCore" Version="5.6.3" />
+    <PackageReference Include="Swashbuckle.AspNetCore.Swagger" Version="6.3.1" />
   </ItemGroup>
 
   <ItemGroup>
     <ProjectReference Include="..\RabbitMQServices.Infra.IoC\RabbitMQServices.Infra.IoC.csproj" />
-  </ItemGroup>
-
-  <ItemGroup>
-    <Folder Include="Controllers\" />
   </ItemGroup>
 
 </Project>
