--- a/RabbitMQ-Microservices/RabbitMQMicroservices.Banking.Domain/RabbitMQMicroservices.Banking.Domain.csproj
+++ b/RabbitMQ-Microservices/RabbitMQMicroservices.Banking.Domain/RabbitMQMicroservices.Banking.Domain.csproj
@@ -5,14 +5,15 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <Folder Include="Commands\" />
-    <Folder Include="CommandHandlers\" />
-    <Folder Include="Events\" />
     <Folder Include="EventHandlers\" />
   </ItemGroup>
 
   <ItemGroup>
     <PackageReference Include="MediatR" Version="10.0.1" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\RabbitMQMicroservices.Domain.Core\RabbitMQMicroservices.Domain.Core.csproj" />
   </ItemGroup>
 
 </Project>
